fix safari fullscreen toggle icon weird stretch overflow 2

--- a/assets/css/default/style.scss
+++ b/assets/css/default/style.scss
@@ -360,7 +360,7 @@ html::after { content: "";
 }
 
 .fullscreenTg {
-    width: 24px !important;
+    padding: 0;
 }
 
 // darkmode
